--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,10 +6,6 @@ COPY package*.json ./
 
 RUN npm install
 
-COPY . .
-
-RUN npm run build
-
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
