Add Vercel config and improve CORS handling
Added vercel.json for backend deployment on Vercel. Enhanced CORS configuration in server.ts to allow both local and production frontend origins. Updated .env.example with a note for production frontend URL. Minor formatting improvements in Canvas.tsx for clarity.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 PORT=3001
 ABLY_API_KEY=your_ably_api_key_here
 CORS_ORIGIN=http://localhost:3000
+# Em produção, adicione a URL do frontend: https://colab-canvas.vercel.app
